implemented suggest scheduler and endpoint to save and optimize imports

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,3 +18,4 @@ gestionalecontenuti:
     host: 80.241.142.27
     user: admintlt
     password: Qw9o&26g
+  suggestUrl: https://suggestqueries.google.com/complete/search?output=toolbar&hl=it&q={keyWord}
