--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,8 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate.enable_lazy_load_no_trans: true
   mail:
     host: cs03.imgwebsolutions.it
     username: info@tilinkotool.it
