--- a/src/main/resources/application-prodlocal.yaml
+++ b/src/main/resources/application-prodlocal.yaml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3308/gfl
+    url: jdbc:mysql://localhost:3308/gfl_test
     username: tilinko_usr
     password: uLCN!2kJ2
