--- a/src/main/resources/application-prodlocal.yaml
+++ b/src/main/resources/application-prodlocal.yaml
@@ -1,5 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3308/gfl_test
+#    url: jdbc:mysql://localhost:3308/gfl_test
+    url: jdbc:mysql://localhost:3308/gfl
     username: tilinko_usr
     password: uLCN!2kJ2
