--- a/src/main/resources/application-tilinkotool.yaml
+++ b/src/main/resources/application-tilinkotool.yaml
@@ -5,3 +5,8 @@ spring:
     password: uLCN!2kJ2
   jpa:
     show-sql: false
+
+tilinko:
+  confirm-base-url: "https://customers.tilinkotool.it/confirm?code="
+  confirm-email-base-url: "https://customers.tilinkotool.it/confirm-email?code="
+  reset-password-base-url: "https://customers.tilinkotool.it/reset-password?code="
