--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,19 @@
             <version>4.0.5</version>
         </dependency>
 
+        <!-- For excel -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.3</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
